--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,12 +11,13 @@ data:
   encoder_hop_size: 320
   encoder_out_channels: 768 # 256 if using 'hubertsoft'
   encoder_ckpt: pretrain/contentvec/checkpoint_best_legacy_500.pt
+  units_forced_mode: 'nearest' # Recommended 'nearest'; 'left' and others only use for compatible with history code
   speaker_encoder: 'ge2e' # only use use_speaker_encoder
   speaker_encoder_sample_rate: 16000
   speaker_encoder_out_channels: 256
   speaker_encoder_ckpt: 'pretrain/speaker_encoder/best_model.pth.tar' # only use with use_speaker_encoder
   speaker_encoder_config: 'pretrain/speaker_encoder/config.json' # only use with use_speaker_encoder
-  speaker_encoder_mode: 'each_spk' # 'each_wav' or 'each_spk', only use with use_speaker_encoder, 'each_wav' will retain the spk_emb of each wav, 'each_spk' will average the spk_emb from all wav of the same speaker into one spk_emb
+  speaker_encoder_mode: 'each_spk' # 'each_wav' or 'each_spk', only use with use_speaker_encoder
   volume_noise: 0 # if not 0 ,add noise for volume in train ;;;;EXPERIMENTAL FUNCTION, NOT RECOMMENDED FOR USE;;;;
   train_path: data/train # Create a folder named "audio" under this path and put the audio clip in it
   valid_path: data/val # Create a folder named "audio" under this path and put the audio clip in it
@@ -29,7 +30,7 @@ model:
   n_hidden: 256
   use_pitch_aug: true  
   n_spk: 1 # max number of different speakers
-  use_speaker_encoder: false
+  use_speaker_encoder: false # ;;;;EXPERIMENTAL FUNCTION, NOT RECOMMENDED FOR USE;;;;
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
