--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,7 +4,7 @@ data:
   f0_max: 800 # about G5
   sampling_rate: 44100
   block_size: 512 # Equal to hop_length
-  duration: 2 # Audio duration during training, must be less than the duration of the shortest audio clip
+  duration: 6 # Audio duration during training, must be less than the duration of the shortest audio clip
   encoder: 'contentvec768l12' # 'hubertsoft', 'hubertbase', 'hubertbase768', 'contentvec', 'contentvec768' or 'contentvec768l12' or 'cnhubertsoftfish'
   cnhubertsoft_gate: 10 # only use with cnhubertsoftfish
   encoder_sample_rate: 16000
@@ -26,6 +26,8 @@ model:
   n_hidden: 256
   use_pitch_aug: true  
   n_spk: 1 # max number of different speakers
+  mrte_layer: 5 # layer of mrte
+  mrte_hident_size: 512
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
@@ -39,10 +41,10 @@ env:
 train:
   num_workers: 2 # If your cpu and gpu are both very strong, set to 0 may be faster!
   amp_dtype: fp32 # fp32, fp16 or bf16 (fp16 or bf16 may be faster if it is supported by your gpu)
-  batch_size: 48
+  batch_size: 40
   cache_all_data: true # Save Internal-Memory or Graphics-Memory if it is false, but may be slow
   cache_device: 'cpu' # Set to 'cuda' to cache the data into the Graphics-Memory, fastest speed for strong gpu
-  cache_fp16: true
+  cache_fp16: false
   epochs: 100000
   interval_log: 10
   interval_val: 2000
@@ -52,3 +54,4 @@ train:
   gamma: 0.5
   weight_decay: 0
   save_opt: false
+  reference_duration: 300 # frames 
