--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -28,9 +28,10 @@ model:
   use_pitch_aug: true  
   n_spk: 1 # max number of different speakers
   text2semantic:
-    type: 'llama'
+    type: 'roformer'
     mode: 'phone' # choice: phone, phone+text, phone+bert, phone+text+bert
     semantic_kmeans_num: 10000
+    codebook_path: 'pretrain/semantic_codebook.pt'
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
