--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -32,6 +32,25 @@ model:
     mode: 'phone' # choice: phone, phone+text, phone+bert, phone+text+bert
     semantic_kmeans_num: 10000
     codebook_path: 'pretrain/semantic_codebook.pt'
+    train:
+      batch_size: 32
+      lr: 0.0001
+      decay_step: 100000
+      gamma: 0.5
+      weight_decay: 0
+      save_opt: false
+      cache_all_data: false
+      num_workers: 2
+    model:
+      num_hidden_layers: 12
+      hidden_size: 768
+      num_attention_heads: 12
+      intermediate_size: 2048
+      hidden_act: "gelu"
+      hidden_dropout_prob: 0.1
+      attention_probs_dropout_prob: 0.1
+      initializer_range: 0.02
+      layer_norm_eps: 1e-12
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
