--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -38,12 +38,11 @@ model:
       decay_step: 100000
       gamma: 0.5
       weight_decay: 0
-      save_opt: false
+      save_opt: true
       cache_all_data: false
       num_workers: 2
       accumulate_grad_batches: 1
       epochs: 100000
-      amp_dtype: fp32
       generate_audio: False
       expdir: exp/lm
     model:
@@ -56,6 +55,7 @@ model:
       attention_probs_dropout_prob: 0.1
       initializer_range: 0.02
       layer_norm_eps: 1e-12
+      n_spk: 1
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
@@ -82,3 +82,4 @@ train:
   gamma: 0.5
   weight_decay: 0
   save_opt: false
+  last_save_model_num: 3
