--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -55,6 +55,7 @@ model:
       attention_probs_dropout_prob: 0.1
       initializer_range: 0.02
       layer_norm_eps: 1e-12
+      max_position_embeddings: 3072
       n_spk: 1
 device: cuda
 vocoder:
