--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -45,6 +45,9 @@ model:
       epochs: 100000
       generate_audio: False
       expdir: exp/lm
+      warm_up_steps: 1000
+      grad_norm_weight: 1.0
+      clip_grad_norm: -1 # -1 means no clip
     model:
       num_hidden_layers: 6
       hidden_size: 512
@@ -86,3 +89,6 @@ train:
   last_save_model_num: 3
   use_units_quantize: true # If you want to use your own quantization, set to true
   units_quantize_type: kmeans # 'kmean' or 'vq'
+  warm_up_steps: 1000
+  grad_norm_weight: 1.0
+  clip_grad_norm: -1 # -1 means no clip
