--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -46,6 +46,7 @@ model:
       generate_audio: False
       expdir: exp/lm
       warm_up_steps: 1000
+      start_lr: 1e-5
       clip_grad_norm: -1 # -1 means no clip
     model:
       num_hidden_layers: 6
@@ -89,4 +90,5 @@ train:
   use_units_quantize: true # If you want to use your own quantization, set to true
   units_quantize_type: kmeans # 'kmean' or 'vq'
   warm_up_steps: 1000
+  start_lr: 1e-5
   clip_grad_norm: -1 # -1 means no clip
