--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -30,7 +30,7 @@ model:
   text2semantic:
     type: 'roformer'
     mode: 'phone' # choice: phone, phone+text, phone+bert, phone+text+bert
-    semantic_kmeans_num: 10000
+    semantic_kmeans_num: 2048
     codebook_path: 'pretrain/semantic_codebook.pt'
     train:
       batch_size: 6
@@ -74,7 +74,7 @@ train:
   num_workers: 2 # If your cpu and gpu are both very strong, set to 0 may be faster!
   amp_dtype: fp32 # fp32, fp16 or bf16 (fp16 or bf16 may be faster if it is supported by your gpu)
   batch_size: 1
-  cache_all_data: false # Save Internal-Memory or Graphics-Memory if it is false, but may be slow
+  cache_all_data: true # Save Internal-Memory or Graphics-Memory if it is false, but may be slow
   cache_device: 'cpu' # Set to 'cuda' to cache the data into the Graphics-Memory, fastest speed for strong gpu
   cache_fp16: true
   epochs: 100000
