--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -32,6 +32,7 @@ model:
     mode: 'phone' # choice: phone, phone+text, phone+bert, phone+text+bert
     semantic_kmeans_num: 2048
     codebook_path: 'pretrain/semantic_codebook.pt'
+    n_spk: 1
     train:
       batch_size: 6
       lr: 0.0002
@@ -49,17 +50,28 @@ model:
       start_lr: 1e-5
       clip_grad_norm: -1 # -1 means no clip
     model:
-      num_hidden_layers: 6
-      hidden_size: 512
-      num_attention_heads: 8
-      intermediate_size: 1024
-      hidden_act: "gelu"
-      hidden_dropout_prob: 0.1
-      attention_probs_dropout_prob: 0.1
-      initializer_range: 0.02
-      layer_norm_eps: 1e-12
-      max_position_embeddings: 3072
-      n_spk: 1
+      encoder:
+        num_hidden_layers: 6
+        hidden_size: 512
+        num_attention_heads: 8
+        intermediate_size: 1024
+        hidden_act: "gelu"
+        hidden_dropout_prob: 0.1
+        attention_probs_dropout_prob: 0.1
+        initializer_range: 0.02
+        layer_norm_eps: 1e-12
+        max_position_embeddings: 3072
+      decoder:
+        num_hidden_layers: 6
+        hidden_size: 512
+        num_attention_heads: 8
+        intermediate_size: 1024
+        hidden_act: "gelu"
+        hidden_dropout_prob: 0.1
+        attention_probs_dropout_prob: 0.1
+        initializer_range: 0.02
+        layer_norm_eps: 1e-12
+        max_position_embeddings: 3072
 device: cuda
 vocoder:
   type: 'nsf-hifigan'
