--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,14 +5,14 @@ data:
   sampling_rate: 44100
   block_size: 512 # Equal to hop_length
   duration: 2 # Audio duration during training, must be less than the duration of the shortest audio clip
-  encoder: 'contentvec768l12' # 'hubertsoft', 'hubertbase', 'hubertbase768', 'contentvec', 'contentvec768' or 'contentvec768l12' or 'cnhubertsoftfish'
+  encoder: 'w2v-bert' # 'hubertsoft', 'hubertbase', 'hubertbase768', 'contentvec', 'contentvec768' or 'contentvec768l12' or 'cnhubertsoftfish'
   cnhubertsoft_gate: 10 # only use with cnhubertsoftfish
   encoder_sample_rate: 16000
   encoder_hop_size: 320
   encoder_out_channels: 768 # 256 if using 'hubertsoft'\
   force_units_interpolation: false # If true, the encoder will interpolate the units to the encoder_hop_size
   source_encoder_hop_size: 320 # If force_units_interpolation is true, the encoder will interpolate the source units to the encoder_hop_size
-  encoder_ckpt: pretrain/contentvec/checkpoint_best_legacy_500.pt
+  encoder_ckpt: pretrain
   units_forced_mode: 'nearest' # Recommended 'nearest',experiment 'rfa512to441' and 'rfa441to512' ; 'left'  only use for compatible with history code
   volume_noise: 0 # if not 0 ,add noise for volume in train ;;;;EXPERIMENTAL FUNCTION, NOT RECOMMENDED FOR USE;;;;
   train_path: data/train # Create a folder named "audio" under this path and put the audio clip in it
