Add units_scale parameter to VQTransformer and VQCNN models

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -96,6 +96,7 @@ vqae:
   type: "cnn" # 'cnn' or 'transformer'
   n_layers: 3
   n_heads: 8
+  units_scale: 1
   expdir: exp/vq
 train:
   num_workers: 2 # If your cpu and gpu are both very strong, set to 0 may be faster!
