--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -56,6 +56,7 @@ model:
       warm_up_steps: 1000
       start_lr: 1e-5
       clip_grad_norm: -1 # -1 means no clip
+      condition_drop_out: 0.1
     model:
       gradient_checkpointing: true
       encoder:
