--- a/configs/config_v2_comb.yaml
+++ b/configs/config_v2_comb.yaml
@@ -53,6 +53,7 @@ model:
     conv_only: true # use Transformer block with conv block, if false
     conv_dropout: 0.0
     atten_dropout: 0.1
+    use_weight_norm: false
   naive_fn_grad_not_by_diffusion: false # dont change if dont understand; more info:diffusion/unit2mel.py
 device: cuda
 vocoder:
