--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -99,6 +99,7 @@ vqae:
   n_heads: 8
   units_scale: 1
   expdir: exp/vq
+  time_downsample_rate: 1
 train:
   num_workers: 2 # If your cpu and gpu are both very strong, set to 0 may be faster!
   amp_dtype: fp32 # fp32, fp16 or bf16 (fp16 or bf16 may be faster if it is supported by your gpu)
