--- a/configs/config_v2.yaml
+++ b/configs/config_v2.yaml
@@ -48,6 +48,7 @@ env:
   expdir: exp/wavenet-test
   gpu_id: 0
 train:
+  use_ema: false
   num_workers: 2 # If your cpu and gpu are both very strong, set to 0 may be faster!
   amp_dtype: fp32 # fp32, fp16 or bf16 (fp16 or bf16 may be faster if it is supported by your gpu)
   batch_size: 48
