--- a/configs/config_naivev2reflow.yaml
+++ b/configs/config_naivev2reflow.yaml
@@ -56,6 +56,7 @@ env:
   expdir: exp/naivev2reflow
   gpu_id: 0
 train:
+  ema_decay: 0.9999 # <1
   use_ema: false
   num_workers: 0 # If your cpu and gpu are both very strong, set to 0 may be faster!
   amp_dtype: fp16 # fp32, fp16 or bf16 (fp16 or bf16 may be faster if it is supported by your gpu)
