--- a/configs/config_naivev2.yaml
+++ b/configs/config_naivev2.yaml
@@ -36,7 +36,16 @@ model:
     conv_dropout: 0.0
     atten_dropout: 0.1
     use_weight_norm: false
-device: cuda
+device: 'cuda'
+ddp:
+  use_ddp: false #   if true, ddp_device will cover device and gpu id
+  port: '13348'
+  ddp_cache_gpu: false
+  ddp_device:
+    - 'cuda:1'
+    - 'cuda:2'
+    - 'cuda:3'
+    - 'cuda:4'
 vocoder:
   type: 'nsf-hifigan'
   ckpt: 'pretrain/nsf_hifigan/model'
