implement consistency flow matching

--- a/configs/config_naivev2reflow_combo.yaml
+++ b/configs/config_naivev2reflow_combo.yaml
@@ -62,6 +62,9 @@ model:
   naive_out_mel_cond_reflow: false # mel condition diffusion is a test function, maybe can make the model learn faster but less quality and pitch range.
   consistency: false
   consistency_only: true
+  consistency_delta_t: 0.1
+  consistency_lambda_f: 1.0
+  consistency_lambda_v: 1.0 
 device: 'cuda'
 ddp:
   use_ddp: false #   if true, ddp_device will cover device and gpu id
