--- a/configs/config_naivev2reflow_1step_test.yaml
+++ b/configs/config_naivev2reflow_1step_test.yaml
@@ -19,7 +19,7 @@ data:
     - wav
 model:
   t_start: 0.0 # do not change
-  type: 'ReFlow'
+  type: 'ReFlow1Step'
   n_hidden: 256
   use_pitch_aug: true  
   n_spk: 2 # max number of different speakers
@@ -46,11 +46,6 @@ model:
     channel_norm: false
   mask_cond_ratio: 'NOTUSE' # input 'NOTUSE' if not use
   loss_type: 'l2' # 'l1', 'l2' or 'l2_lognorm'
-  consistency: false
-  consistency_only: true
-  consistency_delta_t: 0.1
-  consistency_lambda_f: 1.0
-  consistency_lambda_v: 0.01 
 device: 'cuda'
 ddp:
   use_ddp: false #   if true, ddp_device will cover device and gpu id
